--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@
     color: #fed136;
 }
 
+.bl {
+    margin-left: 70px;
+    margin-right: 70px;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -28,7 +33,7 @@
     font-family: 'Roboto Slab', serif;
     font-weight: 900;
     text-align: center;
-    margin-top: 90px;
+    margin-top: 20px;
 }
 
 .subtitle {
@@ -44,7 +49,7 @@
     width: 39px;
     height: 38px;
     margin-left: -62px;
-    margin-bottom: -14px;
+    margin-bottom: -13px;
 }
 
 .h2 {
@@ -71,8 +76,9 @@
 
 .services1 {
     display: flex;
-    justify-content: space-around;
+    align-items: center;
     margin-top: 100px;
+    margin-left: 120px;
 }
 
 .circle {
@@ -85,7 +91,7 @@
     width: 100%;
     max-width: 1200px;
     padding: 0 15px;
-    margin-top: -500px;
+    margin-top: -550px;
 }
 
 body {
@@ -101,8 +107,7 @@ body {
 }
 
 .contact-us-wrapper {
-    background-color: #222222;
-    margin-top: 100px;
+    margin-top: 50px;
     margin: 30px;
     width: 1300px;
     height: 500px;
@@ -178,12 +183,16 @@ body {
     justify-content: center;
     margin-left: 40%;
     margin-top: 20px;
+    border: none;
+    outline: none;
 }
 
 .map {
-    margin-left: 60%;
+    display: flex;
+    justify-content: center;
 }
 
 .services {
-    margin: 30px;
+    margin: 10px;
+    margin-bottom: 40px;
 }
