--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@
   font-weight: 900;
   display: flex;
 }
-.menu1 {
-  margin-left: 40px;
+.menu1{
+  padding-left: 25px;
 }
 
 .menu1:hover {
@@ -41,7 +41,6 @@
   color: #222222;
   font-family: "Roboto Slab", serif;
   font-weight: 900;
-  margin-top: 130px;
   display: flex;
   justify-content: center;
   margin-bottom: 25px;
@@ -52,7 +51,7 @@
   color: #777777;
   font-weight: 400;
   font-style: italic;
-  margin-top: -30px;
+   margin-top: -30px; 
   display: flex;
   justify-content: center;
 }
@@ -120,11 +119,11 @@ body {
 
 .contact-us-wrapper {
   margin-top: 120px;
-  width: 1400px;
-  height: 50%;
+  width: 100%;
+  height: 100%;
   background-image: url(../img/MapImage.png);
-  background-repeat: no-repeat;
-  display: flex;
+  max-width: 100%;
+   display: flex;
   justify-content: center;
 }
 
@@ -217,9 +216,50 @@ body {
   margin-bottom: 40px;
 }
 
-@media (max-widht: 540px) {
-  .services1 {
-    display: flex;
-    flex-wrap: wrap;
-  }
+@media (max-width: 540px) {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+.titles{
+  display: flex;
+  flex-direction: column;
+  padding-left: 280px;
+}
+.img{
+  margin-left: 80px;
+}
+.h2{
+  margin-left: 80px;
+}
+.services1{
+  display: flex;
+  flex-direction:	column;
+justify-content: center;
+}
+.bl{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap:	none;
+}
+.menu{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.header{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contact-us-wrapper{
+  justify-content: center;
+  max-width: 100%;
+  max-height: 100%;
+}
+.form{
+  flex-direction: column;
+}
 }
