--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,7 @@ justify-content: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 .header{
   display: flex;
@@ -245,7 +246,7 @@ justify-content: center;
 }
 .form{
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
 }
 .h2-2{
   justify-content: center;
@@ -255,6 +256,8 @@ justify-content: center;
 }
 .button{
   width: 200px;
+  justify-content: center;
+  align-items: center;
 }
 .right{
   width: 100%;
@@ -277,6 +280,9 @@ justify-content: center;
 }
 .img{
   justify-content: center;
+}
+.input{
+  margin-bottom: 10px;
 }
 }
 @media(max-width: 1199.98px){
