--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@
   font-weight: 900;
   display: flex;
 }
-.menu1{
+.menu-items{
   padding-left: 25px;
 }
 
-.menu1:hover {
+.menu-items:hover {
   color: #fed136;
 }
 
@@ -54,7 +54,7 @@
   height: 38px;
 }
 
-.h2 {
+.name{
   font-size: 18px;
   letter-spacing: 0px;
   line-height: 75px;
@@ -64,9 +64,7 @@
   text-align: center;
 }
 
-.p {
-  /* width: 280px; */
-  /* height: 58px; */
+.about {
   font-size: 14px;
   letter-spacing: 0px;
   color: #777777;
@@ -76,17 +74,11 @@
   margin-top: -20px;
 }
 
-.services1 {
+.services-content {
   display: flex;
   justify-content: space-around;
   margin-top: 80px;
 }
-
-.circle {
-  margin-left: 95px;
-  margin-bottom: -30px;
-}
-
 .container {
   margin: 0 auto;
   width: 100%;
@@ -151,7 +143,7 @@ body {
   flex-direction: column;
 }
 
-.para {
+.subtitle-2 {
   font-size: 16px;
   color: #777777;
   font-weight: 400;
@@ -161,7 +153,7 @@ body {
   margin-bottom: 75px;
 }
 
-.h2-2 {
+.title-2 {
   font-size: 40px;
   letter-spacing: -1px;
   color: #ffffff;
@@ -169,7 +161,7 @@ body {
   font-weight: 700;
   text-align: center;
   margin-top: 110px;
-}
+} 
 
 .right {
   display: flex;
@@ -191,10 +183,7 @@ body {
   margin-bottom: 58px;
 }
 
-.map {
-  display: flex;
-  justify-content: center;
-}
+
 
 .services {
   margin-top: 10px;
@@ -211,17 +200,17 @@ body {
   border-radius: 50%;
 }
 
-@media (max-width: 540px) {
+@media (max-width: 991.98px) {
 .titles{
   display: flex;
   flex-direction: column;
 }
-.services1{
-  /* display: flex; */
+.services-content{
+ display: flex; 
   flex-direction:	column;
 justify-content: center;
 }
-.bl{
+.block{
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -248,10 +237,10 @@ justify-content: center;
   flex-direction: column;
   justify-content: space-between;
 }
-.h2-2{
+ .title-2{
   justify-content: center;
-}
-.para{
+} 
+.subtitle-2{
   justify-content: center;
 }
 .button{
@@ -284,11 +273,4 @@ justify-content: center;
 .input{
   margin-bottom: 10px;
 }
-}
-@media(max-width: 1199.98px){
-
-}
-@media (max-width: 767.98px) {  
-.form{
-  max-width: 100%;
 }
