--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,18 @@
   display: flex;
   justify-content: center;
 }
+.block{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .img {
   width: 38px;
   height: 38px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .name{
